# DRF_Starter_Template

./: .env.backup  README.md  pyproject.toml
.github/workflows/: django.yml
