[project]
name = "Sample Project"
version = "0.0.1"
description = "Sample Project Description"
readme = "README.md"
authors = [
    { name = "Subash Ghimire", email = "info@subashghimire.info.np" },
]
maintainers = [
    { name = "Subash Ghimire", email = "info@subashghimire.info.np" },
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["Django","Rest Framework"]


[project.urls]
issues = "https://github.com/PublisherName/<Project_Name>/issues"
homepage = "https://<sub_domain>.subashghimire.info.np/"
repository = "https://github.com/PublisherName/<Project_Name>"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["C", "E", "F","I001","Q","SIM", "T", "W"]
ignore = ["F401"]
exclude = ["**/migrations/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20
